--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <button type="submit" onclick="hisobla()">Hisobla</button>
         <div class="result" id="result"></div>
     </div>
+    <button class="tr" onclick="window.location.href='/xususiy.html'">Husuiy korxonalar uchun hisoblash</button>
     <div>
     <h2>Bu dastur 2024-yilning Oktyabr oyidagi elektr uchun to'lovni hisoblaydi  narhlar keyinchalik o'zgarishi mumkin </h2>
     </div>
