--- a/xususiy.html
+++ b/xususiy.html
@@ -3,10 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Elektr To'lovi Hisoblagichi</title>
+    <link rel="stylesheet" href="./xususiy.css">
+    <style>
+        
+    </style>
 </head>
 <body>
-    <h1>Dastur ustida ishlanmoqda</h1>
-    <button onclick="window.location.href='/'">Back</button>
+    <div class="container">
+        <h2>Hususiy korxona uchun Elektr To'lovi Hisoblagichi</h2>
+        <input type="number" id="kilowatt" placeholder="kVt/soat kiriting" required/>
+        <br>
+        <button type="submit" onclick="hisobla()">Hisobla</button>
+        <div class="result" id="result"></div>
+    </div>
+    <button class="tr" onclick="window.location.href='/index.html'">Aholi uchun hisoblash</button>
+    <div>
+    <h2>Bu dastur 2024-yilning Oktyabr oyidagi elektr uchun to'lovni hisoblaydi  narhlar keyinchalik o'zgarishi mumkin </h2>
+    </div>
+
+    <script src="xususiy.js"></script>
 </body>
 </html>
